force-app/main/default/objects/Beat__c/Beat__c.object-meta.xml
<CustomObject>
    <label>Beat Plan</label>
    <nameField>
        <displayFormat>BEAT-{00}</displayFormat>
        <label>BEATID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beat Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>