force-app/main/default/objects/Beat__c/fields/Approval_Statusfor__c.field-meta.xml
<CustomField>
    <fullName>Approval_Statusfor__c</fullName>
    <formula>Text(Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>