force-app/main/default/objects/Beat__c/fields/Beat_Name__c.field-meta.xml
<CustomField>
    <fullName>Beat_Name__c</fullName>
    <formula>Select_Executive__r.FirstName + &apos;&apos; +Select_Executive__r.LastName +&apos;/&apos;+ Month_Name__c +&apos;/&apos;+Text(Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Name</label>
    <type>Text</type>
</CustomField>