force-app/main/default/objects/Beat__c/fields/Current_User_Edit_Access__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Edit_Access__c</fullName>
    <formula>IF( Owner:User.Id =  $User.Id , &apos;true&apos;, &apos;false&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Edit Access</label>
    <type>Text</type>
</CustomField>