force-app/main/default/objects/Beat__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>IF(TEXT(Month__c)=&apos;12&apos;, DATE(VALUE(TEXT(Year__c)),12,31), DATE(VALUE(TEXT(Year__c)),VALUE(TEXT(Month__c))+1,1)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>