force-app/main/default/objects/Beat__c/fields/Month_Name__c.field-meta.xml
<CustomField>
    <fullName>Month_Name__c</fullName>
    <formula>CASE(Month__c,
    &quot;1&quot;, &quot;January&quot;,
    &quot;2&quot;, &quot;February&quot;,
    &quot;3&quot;, &quot;March&quot;,
    &quot;4&quot;, &quot;April&quot;,
    &quot;5&quot;, &quot;May&quot;,
    &quot;6&quot;, &quot;June&quot;,
    &quot;7&quot;, &quot;July&quot;,
    &quot;8&quot;, &quot;August&quot;,
    &quot;9&quot;, &quot;September&quot;,
    &quot;10&quot;, &quot;October&quot;,
    &quot;11&quot;, &quot;November&quot;,
    &quot;12&quot;, &quot;December&quot;,
    &quot;Invalid Month&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Name</label>
    <type>Text</type>
</CustomField>