force-app/main/default/objects/Beat__c/fields/Select_Executive__c.field-meta.xml
<CustomField>
    <fullName>Select_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>6 AND ((1 OR 2 OR 3 OR 4 OR 7) AND 5)</booleanFilter>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Area Sales Officer</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Area Sales Manager</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Regional Sales Manager</value>
        </filterItems>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <valueField>User.Id</valueField>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notEqual</operation>
            <value>Salesforce API Only System Integrations</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Admin</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Beat_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>